--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2eeeab; }
+  background: #999219; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #50ef36; }
+  background: #d8db19; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #379af6; }
+  background: #da65e9; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #6d4006; }
+  background: #56a0d7; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #11eb23; }
+  background: #9ca5d6; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #8c8a87; }
+  background: #571297; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #4f95f9; }
+  background: #f38e9a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e1f9a2; }
+  background: #9b9f46; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8cc7cd; }
+  background: #3dca86; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7a73fd; }
+  background: #50a041; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #b8a317; }
+  background: #f1c9a6; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0e89d2; }
+  background: #87ebb9; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #8b74d7; }
+  background: #508a11; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #084117; }
+  background: #f495c4; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e3069f; }
+  background: #512c65; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #aa8f0e; }
+  background: #147b01; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #4fcc8c; }
+  background: #c19153; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #86fc1b; }
+  background: #d3eb77; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a68be2; }
+  background: #e2af6c; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #a732f3; }
+  background: #d42b14; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a80f59; }
+  background: #10bded; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #181c48; }
+  background: #65b515; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a22073; }
+  background: #13830f; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #6e19d6; }
+  background: #c2beff; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a59ffe; }
+  background: #f21bb8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #641ecd; }
+  background: #2caa3c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #0745a2; }
+  background: #a6d4b2; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #bf0536; }
+  background: #0b99fe; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #a51ee7; }
+  background: #fc41e3; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #491353; }
+  background: #3fc7cd; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #db5760; }
+  background: #cbff7d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #22c4a6; }
+  background: #36d045; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0128ac; }
+  background: #83bcfb; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #1b3e36; }
+  background: #9f6b87; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a3aa75; }
+  background: #06842a; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #966882; }
+  background: #5027ce; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #717a29; }
+  background: #e41850; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #eea87e; }
+  background: #12db69; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #339a34; }
+  background: #128adb; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #dc78d2; }
+  background: #3f8136; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #8ccd69; }
+  background: #546643; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e4f9e3; }
+  background: #9ec178; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a6e7d7; }
+  background: #53aa3f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #78d0f5; }
+  background: #65eb37; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c7800b; }
+  background: #a5da7a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d1fc5f; }
+  background: #8617d3; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c09319; }
+  background: #879b7a; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e4bf09; }
+  background: #165956; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c78ce2; }
+  background: #6a71c3; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #6ea403; }
+  background: #44bea3; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #f5ecf5; }
+  background: #ffaaa7; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #19966f; }
+  background: #437fcb; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #38553d; }
+  background: #daebc0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #7d84ef; }
+  background: #d97280; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #86cdc4; }
+  background: #02bdae; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #4d95fd; }
+  background: #fa993b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #fd2bd1; }
+  background: #1025df; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #617893; }
+  background: #77e5a1; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #529006; }
+  background: #cdff47; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a02e0b; }
+  background: #e072b0; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #666b1b; }
+  background: #1093ff; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e214f2; }
+  background: #b93cb4; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #df0acc; }
+  background: #63c783; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f67821; }
+  background: #9102d1; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fe2411; }
+  background: #e9da03; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #d275a6; }
+  background: #229ea9; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #187aa7; }
+  background: #f69466; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #07239f; }
+  background: #a64cbb; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #025869; }
+  background: #439409; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #97e613; }
+  background: #4f5def; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #3c8f5f; }
+  background: #8ede3b; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #169dae; }
+  background: #1569cf; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e8193b; }
+  background: #5d338b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f2df8e; }
+  background: #58c715; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ed7dc9; }
+  background: #8d27c8; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #77bd2b; }
+  background: #a8c2e9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #3ed584; }
+  background: #28f5bc; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #31fd2e; }
+  background: #67802d; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #ab040e; }
+  background: #28eae2; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c595cf; }
+  background: #777f1e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #738636; }
+  background: #e5fdb5; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b5895f; }
+  background: #0247a1; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a79f1d; }
+  background: #99694c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #06ed79; }
+  background: #b8b426; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #84b70f; }
+  background: #74f6bb; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #47c66f; }
+  background: #f952aa; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #56c349; }
+  background: #0d583b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8bed1a; }
+  background: #b7a1e6; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #b8e4f8; }
+  background: #f0ca70; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #8858cc; }
+  background: #28ac05; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #e6c344; }
+  background: #a67088; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #42b9e4; }
+  background: #c041dd; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #f75371; }
+  background: #11f2b1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #e0bcc2; }
+  background: #4a9939; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #648e8e; }
+  background: #bb4053; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #24eda8; }
+  background: #5b9003; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0648c1; }
+  background: #3d22f1; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #24f079; }
+  background: #8aefc2; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #3b635e; }
+  background: #af94a7; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d539d6; }
+  background: #62742c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9846,7 +9846,7 @@ table .bold-heading {
   text-align: right; }
 
 .theme-button-small {
-  padding: 14px 16px;
+  padding: 12px 20px;
   font-size: 16px;
   background: #a57dff;
   border: 0px;
@@ -11290,7 +11290,7 @@ input[type="submit"] {
 
 .Connectors-top-searchbar-div .search-wrap input {
   width: 100%;
-  padding: 14px 10px;
+  padding: 12px 10px;
   margin-right: 12px;
   border: 0px solid #bababa;
   padding-left: 40px; }
@@ -12064,8 +12064,19 @@ input:checked + .sliders-Not .not-blue-bg {
   background-repeat: no-repeat;
   background-position-x: 90%;
   background-position-y: 20px;
-  height: 45px;
-  margin-right: 13px; }
+  height: 43px;
+  margin-right: 13px;
+  color: #cdcdd6; }
+.save-queries-wrapper .td-bubble {
+  padding: 10px 20px;
+  font-size: 12px;
+  margin-right: 3px; }
+.save-queries-wrapper td:nth-child(2) {
+  padding: 8px 0px 8px 0px !important; }
+
+.device-select-div .theme-select {
+  width: 250px;
+  padding: 10px 10px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
