--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -516,7 +516,7 @@ input[type="submit"] {
 
 .Connectors-top-searchbar-div .search-wrap input {
   width: 100%;
-  padding: 14px 10px;
+  padding: 12px 10px;
   margin-right: 12px;
   border: 0px solid #bababa;
   padding-left: 40px;
@@ -1595,7 +1595,26 @@ input:checked+.sliders-Not .not-blue-bg {
     background-repeat: no-repeat;
     background-position-x: 90%;
     background-position-y: 20px;
-    height: 45px;
+    height: 43px;
     margin-right: 13px;
+    color: #cdcdd6;
+  }
+
+  .td-bubble {
+    padding: 10px 20px;
+    font-size: 12px;
+    margin-right: 3px;
+  }
+
+  td:nth-child(2) {
+    padding: 8px 0px 8px 0px !important;
+  }
+}
+
+
+.device-select-div {
+  .theme-select {
+    width: 250px;
+    padding: 10px 10px;
   }
 }
