changes search bar section

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #999219; }
+  background: #e291a7; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d8db19; }
+  background: #7f4d29; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #da65e9; }
+  background: #638dd2; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #56a0d7; }
+  background: #c3952c; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9ca5d6; }
+  background: #128dd1; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #571297; }
+  background: #be720b; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f38e9a; }
+  background: #ee450e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #9b9f46; }
+  background: #b67994; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3dca86; }
+  background: #47aacb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #50a041; }
+  background: #f00e93; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f1c9a6; }
+  background: #7c2898; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #87ebb9; }
+  background: #9ffee4; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #508a11; }
+  background: #0b42cd; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #f495c4; }
+  background: #0c2f07; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #512c65; }
+  background: #12b03a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #147b01; }
+  background: #19b0e5; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c19153; }
+  background: #257eda; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d3eb77; }
+  background: #433834; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e2af6c; }
+  background: #0ca3ec; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d42b14; }
+  background: #33d422; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #10bded; }
+  background: #5c5efd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #65b515; }
+  background: #8dccf3; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #13830f; }
+  background: #bb840d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #c2beff; }
+  background: #8e445e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f21bb8; }
+  background: #c1d2cc; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #2caa3c; }
+  background: #d49de9; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a6d4b2; }
+  background: #0cfd6a; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #0b99fe; }
+  background: #6e92f5; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #fc41e3; }
+  background: #f905d0; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3fc7cd; }
+  background: #dd8b7a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #cbff7d; }
+  background: #9dfbf7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #36d045; }
+  background: #05dbdf; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #83bcfb; }
+  background: #f56b19; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #9f6b87; }
+  background: #6712dc; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #06842a; }
+  background: #18b399; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #5027ce; }
+  background: #b2fe57; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e41850; }
+  background: #a38ec6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #12db69; }
+  background: #207552; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #128adb; }
+  background: #50b429; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #3f8136; }
+  background: #25ebfa; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #546643; }
+  background: #8a7a6d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #9ec178; }
+  background: #2aa124; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #53aa3f; }
+  background: #6cdfa1; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #65eb37; }
+  background: #a6320c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #a5da7a; }
+  background: #b7325f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #8617d3; }
+  background: #2c1cdd; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #879b7a; }
+  background: #b675de; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #165956; }
+  background: #22c3f7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #6a71c3; }
+  background: #c3265e; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #44bea3; }
+  background: #58c421; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ffaaa7; }
+  background: #73e1b0; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #437fcb; }
+  background: #82ff07; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #daebc0; }
+  background: #e6bf3f; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d97280; }
+  background: #9e4716; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #02bdae; }
+  background: #df1dea; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #fa993b; }
+  background: #59c1c7; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #1025df; }
+  background: #eb9826; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #77e5a1; }
+  background: #cb3e63; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #cdff47; }
+  background: #3806ba; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e072b0; }
+  background: #d2af86; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #1093ff; }
+  background: #5e9cc4; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #b93cb4; }
+  background: #2de80e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #63c783; }
+  background: #87b38c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #9102d1; }
+  background: #9bdd1f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e9da03; }
+  background: #47e8f3; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #229ea9; }
+  background: #49d32c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f69466; }
+  background: #90f145; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a64cbb; }
+  background: #8132be; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #439409; }
+  background: #41bf0d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4f5def; }
+  background: #905e2b; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #8ede3b; }
+  background: #3fe883; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #1569cf; }
+  background: #f19ba4; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #5d338b; }
+  background: #f72b8a; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #58c715; }
+  background: #a10e74; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8d27c8; }
+  background: #024f8b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a8c2e9; }
+  background: #cb8768; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #28f5bc; }
+  background: #22d60e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #67802d; }
+  background: #a10e87; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #28eae2; }
+  background: #0d5886; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #777f1e; }
+  background: #6d41f2; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #e5fdb5; }
+  background: #91bb06; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #0247a1; }
+  background: #8cdaf8; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #99694c; }
+  background: #fc71d3; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b8b426; }
+  background: #79485e; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #74f6bb; }
+  background: #5040e6; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f952aa; }
+  background: #9b46e6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #0d583b; }
+  background: #512e02; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b7a1e6; }
+  background: #ca9b58; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f0ca70; }
+  background: #b49ffc; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #28ac05; }
+  background: #c2d308; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #a67088; }
+  background: #422727; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c041dd; }
+  background: #c8d141; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #11f2b1; }
+  background: #295652; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4a9939; }
+  background: #fd5bfa; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #bb4053; }
+  background: #590b55; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #5b9003; }
+  background: #d6ef8d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #3d22f1; }
+  background: #162ce8; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8aefc2; }
+  background: #70d76e; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #af94a7; }
+  background: #73234e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #62742c; }
+  background: #149e50; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12054,6 +12054,8 @@ input:checked + .sliders-Not .not-blue-bg {
 
 .save-queries-wrapper .search-wrap {
   flex: 1; }
+  .save-queries-wrapper .search-wrap input {
+    margin-right: 0px; }
 .save-queries-wrapper img {
   margin-right: 15px; }
 .save-queries-wrapper select {
@@ -12077,6 +12079,9 @@ input:checked + .sliders-Not .not-blue-bg {
 .device-select-div .theme-select {
   width: 250px;
   padding: 10px 10px; }
+
+.search-right-bar {
+  display: flex; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
