left margin issue on mob

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e291a7; }
+  background: #dea79d; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7f4d29; }
+  background: #c15a88; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #638dd2; }
+  background: #ce300d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c3952c; }
+  background: #bcd7cd; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #128dd1; }
+  background: #8a8b07; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #be720b; }
+  background: #b1dd99; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #ee450e; }
+  background: #d5a39a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b67994; }
+  background: #396b47; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #47aacb; }
+  background: #dc05eb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #f00e93; }
+  background: #de1dfb; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #7c2898; }
+  background: #cd191e; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #9ffee4; }
+  background: #b49b67; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #0b42cd; }
+  background: #219581; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0c2f07; }
+  background: #e86581; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #12b03a; }
+  background: #05a58c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #19b0e5; }
+  background: #44397d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #257eda; }
+  background: #83a579; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #433834; }
+  background: #ef8320; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0ca3ec; }
+  background: #b0306d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #33d422; }
+  background: #2ebe45; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #5c5efd; }
+  background: #0ba3f7; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8dccf3; }
+  background: #399713; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #bb840d; }
+  background: #1e52bd; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #8e445e; }
+  background: #fc526d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c1d2cc; }
+  background: #81e378; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #d49de9; }
+  background: #f23ab9; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #0cfd6a; }
+  background: #69eb6b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #6e92f5; }
+  background: #ffebad; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f905d0; }
+  background: #fb845a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #dd8b7a; }
+  background: #1c9017; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9dfbf7; }
+  background: #89ddf8; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #05dbdf; }
+  background: #599822; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #f56b19; }
+  background: #0979b3; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #6712dc; }
+  background: #de972e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #18b399; }
+  background: #9d3132; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b2fe57; }
+  background: #40f62f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a38ec6; }
+  background: #bf1b27; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #207552; }
+  background: #2d9cc6; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #50b429; }
+  background: #f0f153; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #25ebfa; }
+  background: #8a6ed6; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #8a7a6d; }
+  background: #f73fa2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #2aa124; }
+  background: #8c6f73; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6cdfa1; }
+  background: #bb610c; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a6320c; }
+  background: #274a14; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b7325f; }
+  background: #a88136; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #2c1cdd; }
+  background: #46130f; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b675de; }
+  background: #02c093; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #22c3f7; }
+  background: #ef8ebd; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c3265e; }
+  background: #b6e6c8; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #58c421; }
+  background: #a91af0; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #73e1b0; }
+  background: #d9a25c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #82ff07; }
+  background: #2aa10d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #e6bf3f; }
+  background: #6f2e45; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9e4716; }
+  background: #17587d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #df1dea; }
+  background: #52f5b4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #59c1c7; }
+  background: #08c172; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #eb9826; }
+  background: #aa2662; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cb3e63; }
+  background: #444da4; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #3806ba; }
+  background: #d44ebf; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d2af86; }
+  background: #26289f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #5e9cc4; }
+  background: #e980d0; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2de80e; }
+  background: #af033e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #87b38c; }
+  background: #8b170e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #9bdd1f; }
+  background: #deee54; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #47e8f3; }
+  background: #51bd06; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #49d32c; }
+  background: #9fa076; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #90f145; }
+  background: #29972e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8132be; }
+  background: #b91bd3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #41bf0d; }
+  background: #5dcea0; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #905e2b; }
+  background: #5ea084; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #3fe883; }
+  background: #756b8e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f19ba4; }
+  background: #8c4871; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f72b8a; }
+  background: #63ac76; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a10e74; }
+  background: #be1806; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #024f8b; }
+  background: #be7413; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #cb8768; }
+  background: #90b268; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #22d60e; }
+  background: #9e9521; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a10e87; }
+  background: #0bff68; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #0d5886; }
+  background: #fb4147; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #6d41f2; }
+  background: #77b2b5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #91bb06; }
+  background: #1522bb; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8cdaf8; }
+  background: #8afedf; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #fc71d3; }
+  background: #cc1812; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #79485e; }
+  background: #90323e; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #5040e6; }
+  background: #a3ed6d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #9b46e6; }
+  background: #1a5fe5; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #512e02; }
+  background: #df0b6b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ca9b58; }
+  background: #ff9a36; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #b49ffc; }
+  background: #8bd952; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #c2d308; }
+  background: #95872c; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #422727; }
+  background: #665c07; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c8d141; }
+  background: #1effb0; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #295652; }
+  background: #aa0a96; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #fd5bfa; }
+  background: #3e2111; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #590b55; }
+  background: #18db5f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d6ef8d; }
+  background: #d665ee; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #162ce8; }
+  background: #63bbaf; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #70d76e; }
+  background: #22eca2; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #73234e; }
+  background: #082cec; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #149e50; }
+  background: #26cbbf; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12054,8 +12054,6 @@ input:checked + .sliders-Not .not-blue-bg {
 
 .save-queries-wrapper .search-wrap {
   flex: 1; }
-  .save-queries-wrapper .search-wrap input {
-    margin-right: 0px; }
 .save-queries-wrapper img {
   margin-right: 15px; }
 .save-queries-wrapper select {
@@ -12318,7 +12316,10 @@ input:checked + .sliders-Not .not-blue-bg {
     content: "";
     border-top: 8px solid #776fff;
     top: 46px;
-    left: 48%; } }
+    left: 48%; }
+
+  .save-queries-wrapper .search-wrap input {
+    margin-right: 0px; } }
 /*767 screen end here*/
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
