--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -330,6 +330,14 @@
             }
         }
     }
+
+    .save-queries-wrapper {
+        .search-wrap {
+            input {
+                margin-right: 0px;
+            }
+        }
+    }
 }
 
 /*767 screen end here*/
